correct overflow on hover

--- a/zef-battle/src/components/layouts/form-layout/Button/Button.scss
+++ b/zef-battle/src/components/layouts/form-layout/Button/Button.scss
@@ -13,6 +13,7 @@
 	transition: all 300ms cubic-bezier(0.86, 0.01, 0.15, 0.99);
 	background: white;
 	color: black;
+	overflow: hidden;
 	transform: perspective(1px) translateZ(0);
 
 	&:hover {
@@ -32,7 +33,6 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
-		border-radius: 3px;
 		background: #6f6f6f;
 		clip-path: circle(0% at 50% 50%);
 		transition: 300ms;
